--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<html>
-  <head>
-    <title>I'm Chris</title>
-  </head>
-  <body>
-    <h1>Hi,</h1>
-    <h5>I'm Chris</h5>
-  </body>
-</html>
+<input type="file" accept="image/*;capture=camera">
