--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
+    <link href="/css/base.css" rel="stylesheet" type="text/css" />
     <title>Chris P</title>
   </head>
   <body>
