--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="/css/base.css" rel="stylesheet" type="text/css" />
-    <title>Chris P</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <title>Chris Pettyjohn | Software Engineer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
