--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
                         </button>
                     </a>
                 </div>
+               <div style="width:100%;">
+                   <a href="assets/resume.pdf" target="_blank">
+                       <button style="width: 48%;float:left;margin-top:4%;">
+                           Resume
+                       </button>
+                   </a>
+                   <a href="mailto:chrismpettyjohn@gmail.com">
+                       <button style="width: 48%;float:right;margin-top:4%;">
+                           Email
+                       </button>
+                   </a>
+               </div>
            </div>
         </div>
     </body>
