buttons full width

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                <h1>I'm Chris</h1>
                <h4 class="mini-container">Software Engineer & Startup Founder</h4>
                 <div style="width: 100%;">
-                    <a href="https://github.com/chrismpettyjohn" target="_blank">
+                    <a href="assets/resume.pdf" target="_blank">
                         <button style="width: 48%;float:left;">
-                            Github
+                            Resume
                         </button>
                     </a>
                     <a href="https://www.linkedin.com/in/chrismpettyjohn/" target="_blank">
@@ -24,13 +24,13 @@
                     </a>
                 </div>
                <div style="width:100%;">
-                   <a href="assets/resume.pdf" target="_blank">
-                       <button style="width: 48%;float:left;margin-top:4%;">
-                           Resume
+                   <a href="https://github.com/chrismpettyjohn" target="_blank">
+                       <button style="width: 48%;float:left;">
+                           Github
                        </button>
                    </a>
                    <a href="mailto:chrismpettyjohn@gmail.com">
-                       <button style="width: 48%;float:right;margin-top:4%;">
+                       <button style="width: 48%;float:right;">
                            Email
                        </button>
                    </a>
