--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <div class="container">
            <div style="text-align: center;width: 95%;max-width:1200px;overflow:hidden;">
                <h1>I'm Chris</h1>
-               <h4 class="mini-container">Software Engineer & Startup Founder</h4>
+               <div class="mini-container">
+                   <h4>Software Engineer & Startup Founder</h4>
+               </div>
                 <div style="width: 100%;">
                     <a href="assets/resume.pdf" target="_blank">
                         <button style="width: 48%;float:left;">
