--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
            <div style="text-align: center;width: 95%;max-width:1200px;overflow:hidden;">
                <h1>I'm Chris</h1>
                <div class="mini-container">
-                   <h4>Software Engineer & Startup Founder</h4>
+                   <h4>Software Engineer</h4>
                </div>
                 <div style="width: 100%;">
                     <a href="assets/resume.pdf" target="_blank">
