--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
            <div style="text-align: center;width: 95%;max-width:1200px;overflow:hidden;">
-               <h1>I'm Chris</h1>
+               <h1>Chris Pettyjohn</h1>
                <div class="mini-container">
                    <h4>Software Engineer</h4>
                </div>
