--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                    <h4>Software Engineer</h4>
                </div>
                 <div style="width: 100%;">
-                    <a href="assets/resume.pdf" target="_blank">
+                    <a href="assets/Christopher-Pettyjohn.pdf" target="_blank">
                         <button style="width: 48%;float:left;">
                             Resume
                         </button>
