design: blue theme

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar">
       <div class="nav-content">
-        <div class="logo">CP</div>
+        <div class="logo">Christopher Pettyjohn</div>
         <div class="nav-links">
           <a href="#about">About</a>
           <a href="#gallery">Gallery</a>
@@ -51,7 +51,7 @@
               <p>
                 Technology has been my lifelong passion—from assembling my first computer at 8 and learning NodeJS at the age of 10. This relentless curiosity
                 launched my career straight out of school, leading me to partner with global giants like Apple, Nike, and Mars, solving complex challenges on
-                the world’s biggest stages.
+                the world's biggest stages.
               </p>
               <p>
                 With over 15 years at the forefront of technology, I've grown from developing immersive MMO experiences and thriving digital communities into an
@@ -77,16 +77,16 @@
             </div>
             <div class="skills">
               <h3>Core Competencies</h3>
-              <div class="skill-tags">
-                <span>System Architecture</span>
-                <span>Technical Leadership</span>
-                <span>Product Strategy</span>
-                <span>Team Building</span>
-                <span>Cloud Infrastructure</span>
-                <span>DevOps & CI/CD</span>
-                <span>Performance Optimization</span>
-                <span>Security Best Practices</span>
-              </div>
+              <ul class="skill-list">
+                <li>System Architecture & Design</li>
+                <li>Technical Leadership & Mentoring</li>
+                <li>Product Strategy & Roadmapping</li>
+                <li>Team Building & Development</li>
+                <li>Cloud Infrastructure & DevOps</li>
+                <li>Performance Optimization</li>
+                <li>Security & Best Practices</li>
+                <li>Full-Stack Development</li>
+              </ul>
             </div>
           </div>
         </div>
