feat: move asset files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Christopher Pettyjohn | Senior Software Engineer & Technical Leader</title>
-    <link rel="stylesheet" href="css/theme.css" />
+    <link rel="stylesheet" href="/assets/css/theme.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -40,14 +40,14 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="hero-content">
-        <img src="assets/img/headshot.jpeg" alt="Christopher Pettyjohn" class="profile-image" loading="eager" />
+        <img src="/assets/img/headshot.jpeg" alt="Christopher Pettyjohn" class="profile-image" loading="eager" />
         <div class="glitch-wrapper">
           <h1 class="glitch">Christopher Pettyjohn</h1>
         </div>
         <h2>Senior Software Engineer</h2>
         <p class="tagline">Architecting scalable solutions with 15+ years of full-stack expertise</p>
         <div class="hero-buttons">
-          <a href="assets/resume.pdf" class="btn primary">View Resume</a>
+          <a href="/assets/resume.pdf" class="btn primary">View Resume</a>
           <a href="#contact" class="btn secondary">Get in Touch</a>
         </div>
       </div>
